tests/dev_and_build/errors/js_import_not_found/manual_test_jsenv_dev_server.mjs
import { startDevServer } from "@jsenv/core";
import { jsenvPluginPreact } from "@jsenv/plugin-preact";

await startDevServer({
  sourceDirectoryUrl: import.meta.resolve("./client/"),
  clientAutoreload: {
    clientServerEventsConfig: {
      logs: false,
    },
  },
  port: 6578,
  plugins: [jsenvPluginPreact()],
});
